(feat) Add title header to landing page

--- a/src/index.html
+++ b/src/index.html
@@ -12,10 +12,9 @@
   <script src="node_modules/lodash/lodash.js"></script>
 </head>
 <body>
-  <div id="app"></div>
-  Hello World!
 
-  <div class="homepage-hero-module">
+  <div id="app" class="homepage-hero-module">
+    <h1 class="content__heading content">Welcome to Caveman Catering</h1>
     <div class="video-container">
         <div class="filter"></div>
         <video autoplay loop class="fillWidth">
