Remove looping video Remove React to conversion to Angular

--- a/src/index.html
+++ b/src/index.html
@@ -7,23 +7,13 @@
   <!-- <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css"> -->
   <link rel="stylesheet" href="styles/styles.css">
   <script src="node_modules/jquery/dist/jquery.js"></script>
-  <script src="node_modules/react/dist/react.js"></script>
-  <script src="node_modules/react-dom/dist/react-dom.js"></script>
   <script src="node_modules/lodash/lodash.js"></script>
 </head>
 <body>
 
   <div id="app" class="homepage-hero-module">
-    <h1 class="content__heading content">Welcome to Caveman Catering</h1>
-    <div class="video-container">
-        <div class="filter"></div>
-        <video autoplay loop class="fillWidth">
-            <source src="vids/Out-Camping.mp4" type="video/mp4" />Your browser does not support the video tag. I suggest you upgrade your browser.
-            <source src="vids/Out-Camping.webm" type="video/webm" />Your browser does not support the video tag. I suggest you upgrade your browser.
-        </video>
-        <!-- <div class="poster hidden">
-            <img src="vids/Out-Camping.jpg" alt="">
-        </div> -->
+    <h1 class="content__heading content">Caveman Catering</h1>
+
   </div>
 </div>
 </body>
