--- a/src/index.html
+++ b/src/index.html
@@ -90,7 +90,7 @@
                                 <img class="img-responsive img-full" src="img/meal.jpg" alt="">
                             </div>
                             <div class="item">
-                                <img class="img-responsive img-full" src="img/salad.jpg" alt="">
+                                <img class="img-responsive img-full" src="img/salad2.jpg" alt="">
                             </div>
                             <div class="item">
                                 <img class="img-responsive img-full" src="img/workout.jpg" alt="">
